added footer section in home

--- a/src/app/theme/sass/_color.scss
+++ b/src/app/theme/sass/_color.scss
@@ -28,3 +28,27 @@
 .np-color-grey{
     background-color: $np-color-back-grey;
 }
+
+
+
+
+.np-color-instagram{
+    background: #D93175
+}
+
+
+.np-color-facebook{
+    background: #4565A2;
+}
+
+.np-color-linkedin{
+    background: #0077B5;
+}
+
+.np-color-bitbucket{
+    background: #205081;
+}
+
+.np-color-github{
+    background: #333333;
+}
