--- a/src/app/theme/sass/_text.scss
+++ b/src/app/theme/sass/_text.scss
@@ -32,3 +32,24 @@
 .np-text-align-center{
     text-align: center;
 }
+
+.np-text-color-instagram{
+    color: #D93175
+}
+
+
+.np-text-color-facebook{
+    color: #4565A2;
+}
+
+.np-text-color-linkedin{
+    color: #0077B5;
+}
+
+.np-text-color-bitbucket{
+    color: #205081;
+}
+
+.np-text-color-github{
+    color: #333333;
+}
