--- a/src/app/ui/portfolio/portfolio.component.html
+++ b/src/app/ui/portfolio/portfolio.component.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 
-<div class="mdl-color--grey-800">
+<!--div class="mdl-color--grey-800">
   <footer class="mdl-mini-footer">
   
   <div class="mdl-mini-footer__left-section">
@@ -66,41 +66,42 @@
     </ul>
   </div>
 </footer>
-</div>
+</div-->
 
-<div class="mdl-color--grey-800">
-<div class="npt-footer np-flex-container ">
-<div class="npt__left-section">
-    <ul class="npt__link-list">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+<footer class="mdl-color--white">
+<div class="footer-content np-flex-container ">
+<div class="footer-left-section">
+    <ul class="footer-link-list font-comfortaa">
+      <li><a>About</a></li>
+      <li><a>|</a></li>
+      <li><a>Contact</a></li>
     </ul>
 
   </div>
 
-  <div class="npt__right-section">
+  <div class="footer-right-section">
     <ul class="social">
       <li>
         <button mdl-button mdl-button-type="icon">
-                        <i class="icon-github-circled socialicon white"></i>
+                        <i class="icon-github-circled socialicon np-text-color-gethub"></i>
+                    </button>
+      </li>
+      <li>
+        <button  mdl-button mdl-button-type="icon">
+                        <i class="icon-bitbucket socialicon np-text-color-bitbucket"></i>
                     </button>
       </li>
       <li>
         <button mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon white"></i>
+                        <i class="icon-linkedin socialicon np-text-color-linkedin"></i>
                     </button>
       </li>
       <li>
         <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon white"></i>
+                        <i class="icon-instagram socialicon np-text-color-instagram"></i>
                     </button>
       </li>
     </ul>
   </div>
 </div>
-</div>
+</footer>
