--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,4 +1,3 @@
-
 <div class="np-color-grey">
     <div class="np-layout-content">
         <div class="profile np-container np-color-white" mdl-shadow="2">
@@ -113,4 +112,42 @@
             <h6 class="np-font-comfortaa np-text-shadow">Technology</h6>
         </div>
     </div>
+
+    <footer class="mdl-color--white">
+        <div class="footer-content np-flex-container ">
+            <div class="footer-left-section">
+                <ul class="footer-link-list font-comfortaa">
+                    <li><a>About</a></li>
+                    <li><a>|</a></li>
+                    <li><a>Contact</a></li>
+                </ul>
+
+            </div>
+
+            <div class="footer-right-section">
+                <ul class="social">
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-github-circled socialicon np-text-color-gethub"></i>
+                    </button>
+                    </li>
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-bitbucket socialicon np-text-color-bitbucket"></i>
+                    </button>
+                    </li>
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-linkedin socialicon np-text-color-linkedin"></i>
+                    </button>
+                    </li>
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-instagram socialicon np-text-color-instagram"></i>
+                    </button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </div>
