working on technologies

--- a/src/app/ui/home/home.component.scss
+++ b/src/app/ui/home/home.component.scss
@@ -175,6 +175,11 @@
 
 }
 
+/****************************
+ *                         SERVICE
+ */
+
+
 .service{
 
     .title{
@@ -243,8 +248,8 @@
 
 
 
-/****
- *   footer
+/******************************************
+ *                        Footer
  */
 
  .footer-content{
