--- a/src/app/ui/portfolio/portfolio.component.html
+++ b/src/app/ui/portfolio/portfolio.component.html
@@ -1,107 +1,75 @@
-<div class="profile-bottom np-layout-primary">
-  <mdl-layout-spacer></mdl-layout-spacer>
-  <div>
-    <ul class="social">
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-github-circled socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-behance socialicon white"></i>
-                    </button>
-      </li>
-    </ul>
+<div class="technology np-color-grey">
+  <div class="title">
+    <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Technologies</span></h6>
   </div>
-</div>
 
-<!--div class="mdl-color--grey-800">
-  <footer class="mdl-mini-footer">
+
+<mdl-tabs mdl-ripple mdl-tab-active-index="0">
+  <mdl-tab-panel>
+    <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-12">
+      Android/Front End
+    </mdl-tab-panel-title>
+    <mdl-tab-panel-content>
+      Panel Content 1
+    </mdl-tab-panel-content>
+  </mdl-tab-panel>
+  <mdl-tab-panel >
+    <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-12">
+      Back End/Services
+    </mdl-tab-panel-title>
+    <mdl-tab-panel-content>
+      Panel Content 2
+    </mdl-tab-panel-content>
+  </mdl-tab-panel>
+  <mdl-tab-panel >
+    <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-12">
+      Design
+    </mdl-tab-panel-title>
+    <mdl-tab-panel-content>
+      Panel Content 2
+    </mdl-tab-panel-content>
+  </mdl-tab-panel>
+</mdl-tabs>
+
   
-  <div class="mdl-mini-footer__left-section">
-    <ul class="mdl-mini-footer__link-list">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  <div class="np-container np-padding-bottom-32">
+    <div class="mdl-grid">
 
-  </div>
-  <div class="mdl-mini-footer__right-section">
-    <ul class="social">
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-github-circled socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon white"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon white"></i>
-                    </button>
-      </li>
-    </ul>
-  </div>
-</footer>
-</div-->
+      <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+        <div class="technology-block np-text-color-default">
+          <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+           <div class="technology-logo-container"><img class="technology-logo" src="assets/img/angular.png"> </div>
+          <h6 class="np-font-comfortaa np-text-color-primary">
+            <!--span class="np-font-light">I'm </span-->Angular</h6>
+          <p class="np-font-open-sans">Framework for Webdsdssd dsds dw d wd </p>
+          <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+        </div>
+      </div>
 
-<footer class="mdl-color--white">
-<div class="footer-content np-flex-container ">
-<div class="footer-left-section">
-    <ul class="footer-link-list font-comfortaa">
-      <li><a>About</a></li>
-      <li><a>|</a></li>
-      <li><a>Contact</a></li>
-    </ul>
+      <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+        <div class="technology-block np-text-color-default np-color-white" mdl-shadow="2">
+          <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+          <span class="technology-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
+          <h6 class="np-font-comfortaa">
+            <!--span class="np-font-light">I'm </span-->Web Development</h6>
+          <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+          <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
 
-  </div>
+        </div>
+      </div>
 
-  <div class="footer-right-section">
-    <ul class="social">
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-github-circled socialicon np-text-color-gethub"></i>
-                    </button>
-      </li>
-      <li>
-        <button  mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon np-text-color-bitbucket"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon np-text-color-linkedin"></i>
-                    </button>
-      </li>
-      <li>
-        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon np-text-color-instagram"></i>
-                    </button>
-      </li>
-    </ul>
+      <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+        <div class="technology-block np-text-color-default np-color-white" mdl-shadow="2">
+          <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+          <span class="technology-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
+          <h6 class="np-font-comfortaa">
+            <!--span class="np-font-light">I'm </span-->Web Development</h6>
+          <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+          <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
-</footer>
