--- a/src/app/theme/sass/conf/_variables.scss
+++ b/src/app/theme/sass/conf/_variables.scss
@@ -27,6 +27,7 @@ $np-color-grey-dark: $default-item-text-color;
 $np-color-accent : unquote("rgb(#{$color-accent})") !default;
 
 
+$font-8: 8px;
 $font-10: 10px;
 $font-12: 12px;
 $font-14: 14px;
