--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -107,12 +107,9 @@
         </div>
     </div>
 
-    <div class="technology back">
-        <div class="title">
-            <h6 class="np-font-comfortaa np-text-shadow">Technology</h6>
-        </div>
+    <div class="np-container-large">
+    <np-technology-view></np-technology-view>
     </div>
-
     <footer class="mdl-color--white">
         <div class="footer-content np-flex-container ">
             <div class="footer-left-section">
