--- a/src/app/ui/home/technology.component.html
+++ b/src/app/ui/home/technology.component.html
@@ -6,11 +6,11 @@
 
   <mdl-tabs mdl-ripple mdl-tab-active-index="0">
     <mdl-tab-panel>
-      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-12">
-        Android/Front End
+      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-tab">
+        Android/Web
       </mdl-tab-panel-title>
       <mdl-tab-panel-content>
-        <div class="np-container np-padding-bottom-32">
+        <div class="np-padding-bottom-32">
           <div class="mdl-grid">
 
             <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" *ngFor="let techFront of _mTechFrontList; let i = index">
@@ -28,11 +28,9 @@
       </mdl-tab-panel-content>
     </mdl-tab-panel>
     <mdl-tab-panel>
-      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-12">
-        Back End/Services
-      </mdl-tab-panel-title>
+      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-tab">Back End/Services</mdl-tab-panel-title>
       <mdl-tab-panel-content>
-        <div class="np-container np-padding-bottom-32">
+        <div class="np-padding-bottom-32">
           <div class="mdl-grid">
 
             <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" *ngFor="let techBack of _mTechBackendList; let i = index">
@@ -50,11 +48,9 @@
       </mdl-tab-panel-content>
     </mdl-tab-panel>
     <mdl-tab-panel>
-      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-12">
-        Design
-      </mdl-tab-panel-title>
+      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-tab">Design</mdl-tab-panel-title>
       <mdl-tab-panel-content>
-        <div class="np-container np-padding-bottom-32">
+        <div class="np-padding-bottom-32">
           <div class="mdl-grid">
 
             <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" *ngFor="let techDesign of _mTechDesignList; let i = index">
@@ -72,46 +68,4 @@
       </mdl-tab-panel-content>
     </mdl-tab-panel>
   </mdl-tabs>
-
-
-  <div class="np-container np-padding-bottom-32">
-    <div class="mdl-grid">
-
-      <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-        <div class="technology-block np-text-color-default">
-          <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-          <div class="technology-logo-container"><img class="technology-logo" src="assets/img/angular.png"> </div>
-          <h6 class="np-font-comfortaa np-text-color-primary">
-            <!--span class="np-font-light">I'm </span-->Angular</h6>
-          <p class="np-font-open-sans">Framework for Webdsdssd dsds dw d wd </p>
-          <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
-        </div>
-      </div>
-
-      <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-        <div class="technology-block np-text-color-default np-color-white" mdl-shadow="2">
-          <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-          <span class="technology-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
-          <h6 class="np-font-comfortaa">
-            <!--span class="np-font-light">I'm </span-->Web Development</h6>
-          <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
-          <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
-
-        </div>
-      </div>
-
-      <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-        <div class="technology-block np-text-color-default np-color-white" mdl-shadow="2">
-          <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-          <span class="technology-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
-          <h6 class="np-font-comfortaa">
-            <!--span class="np-font-light">I'm </span-->Web Development</h6>
-          <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
-          <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
-
-        </div>
-      </div>
-
-    </div>
-  </div>
 </div>
