added about-card in about

--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -4,8 +4,18 @@
 .np-padding-bottom-32{
   padding-bottom: 32px;
 }
+
+.np-padding-bottom-16{
+  padding-bottom: 16px;
+}
+
+
 .np-margin-top-32{
   margin-top: 32px;
+}
+
+.np-margin-bottom-64{
+  margin-bottom: 64px;
 }
 .np-margin-bottom-20{
   margin-bottom: 20px;
@@ -13,4 +23,8 @@
 
 .np-margin-right-24{
   margin-right: 24px;
+}
+
+.np-margin-right-12{
+  margin-right: 12px;
 }
