--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -49,3 +49,18 @@ width: 100%;
   display: flex;
   
 }
+
+.np-layout-align-middle{
+  vertical-align: middle;
+}
+
+.np-margin-auto-horizontal{
+  margin: 0 auto;
+}
+.np-margin-auto-vertical{
+  margin: auto 0;
+}
+
+.np-margin-auto{
+  margin: auto;
+}
