--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,8 +105,8 @@
             <nav class="mdl-navigation mdl-layout--large-screen-only">
                 <a class="mdl-navigation__link"  routerLink="/home" routerLinkActive="indicator-primary-important np-text-color-important-primary">Home</a>
                 <a class="mdl-navigation__link" routerLink="/portfolio" routerLinkActive="indicator-primary-important np-text-color-important-primary">Portfolio</a>
-                <a class="mdl-navigation__link" routerLink="/profile" routerLinkActive="indicator-primary-important np-text-color-important-primary">About</a>
-                <a class="mdl-navigation__link" routerLink="/contantme" routerLinkActive="indicator-primary-important np-text-color-important-primary">Contact</a>
+                <a class="mdl-navigation__link" routerLink="/about" routerLinkActive="indicator-primary-important np-text-color-important-primary">About</a>
+                <a class="mdl-navigation__link" routerLink="/profile" routerLinkActive="indicator-primary-important np-text-color-important-primary">Contact</a>
             </nav>
         </mdl-layout-header-row>
     </mdl-layout-header>
@@ -124,10 +124,10 @@
         </header>
 
         <nav class="np-navigation mdl-navigation np-font-open-sans np-font-light np-color-white mdl-color-text--grey-800">
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">explore</mdl-icon>Home</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">create</mdl-icon>Portfolio</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">work</mdl-icon>About</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">report</mdl-icon>Contact</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">home</mdl-icon>Home</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">description</mdl-icon>Portfolio</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">perm_identity</mdl-icon>About</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">contacts</mdl-icon>Contact</a>
             <div class="mdl-layout-spacer"></div>
             <div class="nav-bottom">
                 <ul class="social">
