--- a/src/app/theme/sass/draw/_border.scss
+++ b/src/app/theme/sass/draw/_border.scss
@@ -14,5 +14,5 @@
 }
 
 .np-shadow-decent{
-    box-shadow: 2px 4px 20px 0px rgba(156,202,240,0.3ch);
+    box-shadow: 2px 4px 20px 0px rgba(0,0,00,0.3);
 }
