--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -21,10 +21,10 @@
                         <div class="about-header np-padding-bottom-16">
                             <h4 class="np-text-color-dark np-font-comfortaa np-font-bolder"><span>Niraj Prakash</span></h4>
                             <!--h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6-->
-                            <h6 class="mdl-color-text--grey-400 np-font-open-sans np-font-bold np-font-10"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
+                            <h6 class="mdl-color-text--grey-500 np-font-open-sans np-font-bold np-font-10"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
                         </div>
 
-                        <div class="about-subheader mdl-color-text--grey-400">
+                        <div class="about-subheader mdl-color-text--grey-500">
                             <p>
                                 <mdl-icon class="np-layout-align-middle np-font-12 np-margin-right-12 np-text-color-primary">email</mdl-icon>nirajprakash13@gmail.com</p>
                             <p>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--6-col about-detail">
-                    <p class="np-font-open-sans np-font-12 mdl-color-text--grey-400">Hello! I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
+                    <p class="np-font-open-sans np-font-12 mdl-color-text--grey-500">Hello! I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
                         with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
                         languages including Java, TypeScript, JavaScript, SQL. Strong background in project management and
                         implemention.
@@ -63,4 +63,53 @@
         </div>
 
     </div>
+
+
+
+    <div class="service np-color-grey">
+        <div class="title">
+            <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Education</span></h6>
+        </div>
+        <div class="np-container-large np-padding-bottom-32">
+            <div class="mdl-grid">
+
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-mobile socialicon np-text-color-dark np-text-shadow"></i></span>
+                        <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Android App Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+                    </div>
+                </div>
+
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
+                        <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Web Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+
+                    </div>
+                </div>
+
+
+                <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-server socialicon np-text-color-dark np-text-shadow"></i></span>
+                        <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Backend Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </div>
