--- a/src/app/ui/about/about.component.scss
+++ b/src/app/ui/about/about.component.scss
@@ -32,7 +32,7 @@ body .demo-blog {
 .about-card{
     padding: 0;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto 64px;
     flex-shrink: 0;
     
     .about-card-content{
@@ -109,6 +109,78 @@ body .demo-blog {
         font-size: 14px; 
   } 
 }*/
+
+
+/****************************
+ *                         SERVICE
+ */
+
+
+.service{
+
+    .title{
+        padding: 28px 0 28px 0;
+        text-align: center;
+
+        /*h6{
+          position: relative;
+
+          &:after {
+              content: '';
+              position:absolute;
+              bottom:0;
+              left: 30%;
+              right: 30%;
+              height: 2px;
+              background:red;
+              display:block;
+          }
+        }*/
+    }
+
+    .service-list-item{
+        text-align: center;
+    }
+    .service-block{
+        text-align: center;
+        max-width: 212px;
+        margin: 4px auto;
+           
+        .socialicon{
+            margin: 20px 0 18px 0;
+            font-size: 24px;
+        }
+
+        button{
+            margin: 14px 0 16px 0;
+        }
+
+
+        mdl-icon{            
+            font-size: 14px;
+        }
+        
+
+        h6{
+            font-size: 12px;
+            margin: 0 10px 0;
+            line-height: 1.2;
+        }
+
+        p{
+            font-size:10px;
+        }
+
+       /* &:hover{
+            background:rgba(255,255,255,1);
+            border-radius: 2px;
+            color: rgba(0,0,0,0.54);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+        }*/
+
+    }
+
+}
 
 
 
